--- a/siteconfig.css
+++ b/siteconfig.css
@@ -1,6 +1,13 @@
 /* siteconfig.css */
 
 /* Reset default browser styles */
+header {
+    font-size: 30px;
+    text-align: center;
+    padding: 20px;
+    font-weight: bold;
+}
+
 body, h1 {
     margin: 0;
     padding: 0;
@@ -8,8 +15,8 @@ body, h1 {
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
-    color: #333;
+    background-color: #333;
+    color: #fff;
 }
 
 h1 {
@@ -18,7 +25,25 @@ h1 {
     padding: 20px;
 }
 
+h2 {
+    font-size: 18px;
+    text-align: center;
+    padding: 20px;
+}
+
 button {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: red;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+div button {
     display: block;
     margin: 20px auto;
     padding: 10px 20px;
@@ -41,9 +66,23 @@ button:hover {
     padding: 20px;
 }
 
+.grid-container2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    padding: 20px;
+}
+
+
+/* -------------- counter card --------------------*/
 .counter-card {
-    background-color: #f9f9f9;
+    background-color: #444;
     padding: 20px;
     border-radius: 4px;
     text-align: center;
+    color: #fff;
+}
+
+.counter-card a:hover img {
+    filter: brightness(50%);
 }
