--- a/siteconfig.css
+++ b/siteconfig.css
@@ -72,11 +72,13 @@ form {
     padding: 20px;
 }
 
-.grid-container2 {
+.grid-container1 {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr;
     gap: 20px;
     padding: 20px;
+    padding-left: 250px;
+    padding-right: 250px;
 }
 
 
