--- a/siteconfig.css
+++ b/siteconfig.css
@@ -78,13 +78,11 @@ form {
     padding: 20px;
 }
 
-.grid-container1 {
+.grid-container2 {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     padding: 20px;
-    padding-left: 250px;
-    padding-right: 250px;
 }
 
 
